Add the login and main app screens; implement navigation between them

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -117,13 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EnterMasterCode" xml:space="preserve">
+    <value>Увядзіце код</value>
+  </data>
   <data name="Greeting.Text" xml:space="preserve">
     <value>Прыветанне</value>
   </data>
   <data name="Greeting.Width" xml:space="preserve">
     <value>200</value>
   </data>
+  <data name="MasterCode" xml:space="preserve">
+    <value>Код</value>
+  </data>
   <data name="SelectUser" xml:space="preserve">
     <value>Абярыце Карыстальника</value>
+  </data>
+  <data name="SignIn" xml:space="preserve">
+    <value>Увайсці</value>
   </data>
 </root>
