--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -117,11 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Autolock" xml:space="preserve">
+    <value>Autolock</value>
+  </data>
+  <data name="Autolock_Description" xml:space="preserve">
+    <value>Automatically locks the app after chosen period of device inactivity</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Back</value>
   </data>
   <data name="ChangeUser" xml:space="preserve">
     <value>Change User</value>
+  </data>
+  <data name="Clear copied item data" xml:space="preserve">
+    <value>Clear copied item data</value>
+  </data>
+  <data name="Clear copied item data_Description" xml:space="preserve">
+    <value>Automatically clears copied details from clipboard</value>
   </data>
   <data name="EnterMasterCode" xml:space="preserve">
     <value>Enter mastercode</value>
@@ -146,6 +158,9 @@
   <data name="Secrets" xml:space="preserve">
     <value>Secrets</value>
   </data>
+  <data name="Security" xml:space="preserve">
+    <value>Security</value>
+  </data>
   <data name="SelectUser" xml:space="preserve">
     <value>Select a User</value>
   </data>
@@ -154,6 +169,12 @@
   </data>
   <data name="SignIn" xml:space="preserve">
     <value>Sign In</value>
+  </data>
+  <data name="Switcher_Off" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="Switcher_On" xml:space="preserve">
+    <value>On</value>
   </data>
   <data name="User" xml:space="preserve">
     <value>User</value>
