--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -117,11 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddNewPassword" xml:space="preserve">
+    <value>Дадайце новы пароль</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Назад</value>
   </data>
   <data name="ChangeUser" xml:space="preserve">
     <value>Змяніць Карыстальніка</value>
+  </data>
+  <data name="CopyPassword" xml:space="preserve">
+    <value>Скапіраваць пароль</value>
+  </data>
+  <data name="DeletePassword" xml:space="preserve">
+    <value>Выдаліць пароль</value>
+  </data>
+  <data name="EditPassword" xml:space="preserve">
+    <value>Рэдагаваць пароль</value>
   </data>
   <data name="EnterMasterCode" xml:space="preserve">
     <value>Увядзіце код</value>
@@ -137,6 +149,12 @@
   </data>
   <data name="MasterCode" xml:space="preserve">
     <value>Код</value>
+  </data>
+  <data name="MyPasswords" xml:space="preserve">
+    <value>Мае Паролі</value>
+  </data>
+  <data name="New" xml:space="preserve">
+    <value>Новы</value>
   </data>
   <data name="Passwords" xml:space="preserve">
     <value>Паролі</value>
