--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -117,11 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddNewPassword" xml:space="preserve">
+    <value>Add new password</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Back</value>
   </data>
   <data name="ChangeUser" xml:space="preserve">
     <value>Change User</value>
+  </data>
+  <data name="CopyPassword" xml:space="preserve">
+    <value>Copy password</value>
+  </data>
+  <data name="DeletePassword" xml:space="preserve">
+    <value>Delete password</value>
+  </data>
+  <data name="EditPassword" xml:space="preserve">
+    <value>Edit password</value>
   </data>
   <data name="EnterMasterCode" xml:space="preserve">
     <value>Enter mastercode</value>
@@ -139,6 +151,12 @@
   </data>
   <data name="MasterCode" xml:space="preserve">
     <value>Mastercode</value>
+  </data>
+  <data name="MyPasswords" xml:space="preserve">
+    <value>My Passwords</value>
+  </data>
+  <data name="New" xml:space="preserve">
+    <value>New</value>
   </data>
   <data name="Passwords" xml:space="preserve">
     <value>Passwords</value>
