--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Appearance" xml:space="preserve">
+    <value>Выгляд</value>
+  </data>
   <data name="Autolock" xml:space="preserve">
     <value>Аўтаблакіроўка</value>
   </data>
@@ -147,8 +150,14 @@
   <data name="Home" xml:space="preserve">
     <value>Галоўная</value>
   </data>
+  <data name="Launch at startup" xml:space="preserve">
+    <value>Запуск пры загрузцы сістэмы</value>
+  </data>
   <data name="MasterCode" xml:space="preserve">
     <value>Код</value>
+  </data>
+  <data name="Other" xml:space="preserve">
+    <value>Іншае</value>
   </data>
   <data name="Passwords" xml:space="preserve">
     <value>Паролі</value>
@@ -173,6 +182,9 @@
   </data>
   <data name="Switcher_On" xml:space="preserve">
     <value>Укл.</value>
+  </data>
+  <data name="Theme" xml:space="preserve">
+    <value>Тэма</value>
   </data>
   <data name="User" xml:space="preserve">
     <value>Карыстальнік</value>
