--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Appearance" xml:space="preserve">
+    <value>Appearance</value>
+  </data>
   <data name="Autolock" xml:space="preserve">
     <value>Autolock</value>
   </data>
@@ -149,8 +152,14 @@
   <data name="Home" xml:space="preserve">
     <value>Home</value>
   </data>
+  <data name="Launch at startup" xml:space="preserve">
+    <value>Launch at startup</value>
+  </data>
   <data name="MasterCode" xml:space="preserve">
     <value>Mastercode</value>
+  </data>
+  <data name="Other" xml:space="preserve">
+    <value>Other</value>
   </data>
   <data name="Passwords" xml:space="preserve">
     <value>Passwords</value>
@@ -175,6 +184,9 @@
   </data>
   <data name="Switcher_On" xml:space="preserve">
     <value>On</value>
+  </data>
+  <data name="Theme" xml:space="preserve">
+    <value>Theme</value>
   </data>
   <data name="User" xml:space="preserve">
     <value>User</value>
