--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -123,7 +123,7 @@
   <data name="Autolock" xml:space="preserve">
     <value>Аўтаблакіроўка</value>
   </data>
-  <data name="Autolock_Description" xml:space="preserve">
+  <data name="AutolockDescription" xml:space="preserve">
     <value>Аўтаматычна блакіруе праграму пасля выбранага перыяду бяздзейнасці прылады</value>
   </data>
   <data name="AddNewPassword" xml:space="preserve">
@@ -135,11 +135,11 @@
   <data name="ChangeUser" xml:space="preserve">
     <value>Змяніць Карыстальніка</value>
   </data>
-  <data name="Clear copied item data" xml:space="preserve">
+  <data name="ClearCopiedData" xml:space="preserve">
     <value>Ачысціць скапіраваныя даныя элемента</value>
   </data>
-  <data name="Clear copied item data_Description" xml:space="preserve">
-    <value>Аўтаматычна ачышчае скапіраваныя дэталі з буфера абмену</value>
+  <data name="ClearCopiedDataDescription" xml:space="preserve">
+    <value>Аўтаматычна ачышчае скапіраваныя дэталі з буфера абмену пасля ўстаўкі</value>
   </data>
   <data name="CopyPassword" xml:space="preserve">
     <value>Скапіраваць пароль</value>
@@ -162,7 +162,7 @@
   <data name="Home" xml:space="preserve">
     <value>Галоўная</value>
   </data>
-  <data name="Launch at startup" xml:space="preserve">
+  <data name="LaunchAtStartup" xml:space="preserve">
     <value>Запуск пры загрузцы сістэмы</value>
   </data>
   <data name="MasterCode" xml:space="preserve">
@@ -213,7 +213,7 @@
   <data name="UserInfo" xml:space="preserve">
     <value>Інфармацыя пра карыстальніка</value>
   </data>
-  <data name="Choose application language" xml:space="preserve">
+  <data name="ChooseApplicationLanguage" xml:space="preserve">
     <value>Выберыце мову праграмы</value>
   </data>
   <data name="Language" xml:space="preserve">
