--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -219,4 +219,25 @@
   <data name="Language" xml:space="preserve">
     <value>Мова</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Адмяніць</value>
+  </data>
+  <data name="EmailOrUsername" xml:space="preserve">
+    <value>Электронная пошта або імя карыстальніка</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Імя карыстальніка</value>
+  </data>
+  <data name="NewPassword" xml:space="preserve">
+    <value>Новы пароль</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Захаваць</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Назва</value>
+  </data>
 </root>
