--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -240,4 +240,7 @@
   <data name="Title" xml:space="preserve">
     <value>Назва</value>
   </data>
+  <data name="PasswordCopiedToClipboard" xml:space="preserve">
+    <value>Пароль скапіраваны ў буфер абмену</value>
+  </data>
 </root>
