--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -242,4 +242,7 @@
   <data name="Title" xml:space="preserve">
     <value>Title</value>
   </data>
+  <data name="PasswordCopiedToClipboard" xml:space="preserve">
+    <value>Password has been copied to clipboard</value>
+  </data>
 </root>
