--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -245,4 +245,10 @@
   <data name="PasswordCopiedToClipboard" xml:space="preserve">
     <value>Password has been copied to clipboard</value>
   </data>
+  <data name="AddPassword" xml:space="preserve">
+    <value>Add Password</value>
+  </data>
+  <data name="NoPasswordsYet" xml:space="preserve">
+    <value>You have no passwords yet</value>
+  </data>
 </root>
