Add a loader to the login view

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -266,4 +266,7 @@
   <data name="PasswordConfirmationDoesNotMatch" xml:space="preserve">
     <value>Password Confirmation does not match</value>
   </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Loading</value>
+  </data>
 </root>
