--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -267,4 +267,10 @@
   <data name="Loading" xml:space="preserve">
     <value>Загрузка</value>
   </data>
+  <data name="PasswordCreated" xml:space="preserve">
+    <value>Пароль "{0}" быў паспяхова дададзены</value>
+  </data>
+  <data name="PasswordModified" xml:space="preserve">
+    <value>Пароль "{0}" быў паспяхова абноўлены</value>
+  </data>
 </root>
