feat(dialog): add a confirmation dialog

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -288,4 +288,7 @@
   <data name="AppTheme_Light" xml:space="preserve">
     <value>Светлая</value>
   </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Так</value>
+  </data>
 </root>
