--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -293,4 +293,19 @@
   <data name="Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="Confirm_PasswordDeletion" xml:space="preserve">
+    <value>Delete the password?</value>
+  </data>
+  <data name="Confirm_PasswordDeletionDetails" xml:space="preserve">
+    <value>The password will be deleted permanently. Do you want to continue?</value>
+  </data>
+  <data name="NewCatalogDialogTitle" xml:space="preserve">
+    <value>Add New Catalog</value>
+  </data>
+  <data name="NewCatalogName" xml:space="preserve">
+    <value>New Catalog</value>
+  </data>
+  <data name="AddNewCatalog" xml:space="preserve">
+    <value>Add new catalog</value>
+  </data>
 </root>
