fix: make the page view models as singletons
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -306,4 +306,7 @@
   <data name="AddNewCatalog" xml:space="preserve">
     <value>Дадаць каталог</value>
   </data>
+  <data name="Or" xml:space="preserve">
+    <value>Або</value>
+  </data>
 </root>
