feat: implement updating catalogs
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -315,6 +315,9 @@
   <data name="Edit" xml:space="preserve">
     <value>Рэдагаваць</value>
   </data>
+  <data name="EditCatalogDialogTitle" xml:space="preserve">
+    <value>Рэдагаваць Каталог</value>
+  </data>
   <data name="RemoveCatalog_Message" xml:space="preserve">
     <value>Каталог "{0}", які змяшчае "{1}" пароляў, будзе выдалены. Працягнуць?</value>
   </data>
