--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -330,4 +330,22 @@
     <value>minute(-s)</value>
     <comment>1 minute(-s), 3 minute(-s)</comment>
   </data>
+  <data name="CatalogCreated_Format" xml:space="preserve">
+    <value>Catalog "{0}" has been successfully created</value>
+  </data>
+  <data name="CatalogCreationFailed_Format" xml:space="preserve">
+    <value>Failed to create catalog "{0}"</value>
+  </data>
+  <data name="CatalogUpdated_Format" xml:space="preserve">
+    <value>Catalog "{0}" has been successfully updated</value>
+  </data>
+  <data name="CatalogUpdateFailed_Format" xml:space="preserve">
+    <value>Failed to update catalog "{0}"</value>
+  </data>
+  <data name="PasswordDeleted_Format" xml:space="preserve">
+    <value>Password "{0}" has been successfully deleted</value>
+  </data>
+  <data name="PasswordDeletetionFailed_Format" xml:space="preserve">
+    <value>Failed to delete password "{0}"</value>
+  </data>
 </root>
