feat(search): handle default button click on the search button
refs: #25

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -346,4 +346,7 @@
   <data name="CatalogUpdateFailed_Format" xml:space="preserve">
     <value>Не атрымалася абнавіць каталог "{0}"</value>
   </data>
+  <data name="NoPasswordsFound" xml:space="preserve">
+    <value>Паролі не знойдзены</value>
+  </data>
 </root>
