--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -348,4 +348,7 @@
   <data name="PasswordDeletetionFailed_Format" xml:space="preserve">
     <value>Failed to delete password "{0}"</value>
   </data>
+  <data name="NoPasswordsFound" xml:space="preserve">
+    <value>No passwords found</value>
+  </data>
 </root>
