--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/be-BY/Resources.resw
@@ -355,7 +355,7 @@
   <data name="Confirm_UserDeletion" xml:space="preserve">
     <value>Карыстальнік {0} і ўсе яго паролі будуць выдалены. Вы хочаце працягнуць?</value>
   </data>
-  <data name="String1" xml:space="preserve">
-    <value />
+  <data name="UpdatePasswordList" xml:space="preserve">
+    <value>Аднавіць</value>
   </data>
 </root>
