--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Strings/en-US/Resources.resw
@@ -357,4 +357,7 @@
   <data name="Confirm_UserDeletion" xml:space="preserve">
     <value>User {0} and all his passwords will be deleted. Do you want to continue?</value>
   </data>
+  <data name="UpdatePasswordList" xml:space="preserve">
+    <value>Refresh</value>
+  </data>
 </root>
