--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -151,7 +151,7 @@
     <value>Рэдагаваць пароль</value>
   </data>
   <data name="EnterMasterCode" xml:space="preserve">
-    <value>Увядзіце код</value>
+    <value>Увядзіце пароль</value>
   </data>
   <data name="Greeting.Text" xml:space="preserve">
     <value>Прыветанне</value>
