--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/en-US/Resources.resw
@@ -369,4 +369,19 @@
   <data name="SeePassword" xml:space="preserve">
     <value>Show Password</value>
   </data>
+  <data name="CannotSavePassword" xml:space="preserve">
+    <value>Cannot save password</value>
+  </data>
+  <data name="Message_LoginEmpty" xml:space="preserve">
+    <value>Login failed for user "{0}": User name or password is empty</value>
+  </data>
+  <data name="Message_LoginError" xml:space="preserve">
+    <value>Login failed for user "{0}": {1}. {2}</value>
+  </data>
+  <data name="Message_LoginFailed" xml:space="preserve">
+    <value>Login failed for user "{0}": User name or password is wrong</value>
+  </data>
+  <data name="Message_LoginSuccess" xml:space="preserve">
+    <value>Authentication succeeded</value>
+  </data>
 </root>
