feat: add an indicator about Caps Lock is active on the login screen
refs: #39

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -382,4 +382,7 @@
   <data name="CannotSavePassword" xml:space="preserve">
     <value>Немагчыма захаваць пароль</value>
   </data>
+  <data name="CapsLockWarningText" xml:space="preserve">
+    <value>Калі Caps Lock уключаны, пароль можа быць няправільным</value>
+  </data>
 </root>
