--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/en-US/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/en-US/Resources.resw
@@ -411,4 +411,10 @@
   <data name="NewPassword_Label" xml:space="preserve">
     <value>New Password</value>
   </data>
+  <data name="PasswordHasBeenChanged" xml:space="preserve">
+    <value>Password has been changed</value>
+  </data>
+  <data name="PasswordIsNotCorrect" xml:space="preserve">
+    <value>Password is not correct</value>
+  </data>
 </root>
