feat(export&import): add a view for export and import of data
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Strings/be-BY/Resources.resw
@@ -415,4 +415,10 @@
   <data name="PasswordIsNotCorrect" xml:space="preserve">
     <value>Пароль няправільны</value>
   </data>
+  <data name="ExportAndImport" xml:space="preserve">
+    <value>Экспарт і імпарт</value>
+  </data>
+  <data name="ExportAndImportTooltip" xml:space="preserve">
+    <value>Экспарт і імпарт дадзеных</value>
+  </data>
 </root>
